@@ -4,6 +4,8 @@ Changes since 0.2.1
 2. doc/tm/curl.tm: Documentation tweaks (Agathoklis D. Hatzimanikas).
 3. src/Makefile.in: Added support for my update_changes_version script
    for the version number to track the changes.txt file.
+4. Added some documentation for babelfish, and moved some code from
+   the translate demo into babelfish.sl (Manfred Hanke).
 
 Changes since 0.2.0
 1. src/curl-module.c: removed "ifdef"s from the code and replaced them
